--- a/acerca_de.html
+++ b/acerca_de.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Inicio</title>
+    <title>Acerca de</title>
 </head>
 <body>
     <header>
@@ -17,12 +17,18 @@
             </ul>
         </nav>
     </header>
-
-    <section class="hero">
-        <h1>Bienvenidos a mi sitio</h1>
-        <p>Explora mis proyectos</p>
+    <section>
+        <h2>Sobre mi</h2>
+        <p>Hola, soy Victor Aquino. Bienvenidos</p>
+        <p>Este es mi sitio</p>
     </section>
-    
+    <section>
+        <h2>Portafolio</h2>
+        <div class="perfil-item">
+            <img src="imagenes/yo.jpg" alt="Perfil 1">
+        </div>
+    </section>
+
     <footer>
         <p>(C) 2024 Mi sitio Web personal</p>
     </footer>
